hexagonal crud
