# src/main/java/com/example/openapitest/member/adapter/in/web/MemberController.java
@@ -1,5 +1,6 @@
 package com.example.openapitest.member.adapter.in.web;
 
+import com.example.openapitest.member.adapter.out.persistence.MemberRepository;
 import com.example.openapitest.member.application.port.in.MemberUseCase;
 import com.example.openapitest.member.domain.Member;
 import io.tej.SwaggerCodgen.api.MemberApi;
@@ -44,5 +45,22 @@ public class MemberController implements MemberApi {
         ));
 
         return ResponseEntity.ok(members);
+    }
+
+    @Override
+    public ResponseEntity<MemberResponse> updateMember(Long id, MemberRequest memberRequest) {
+        Member member = memberUseCase.updateMember(id, memberRequest);
+
+        MemberResponse memberResponse = new MemberResponse()
+            .id(member.getId())
+            .name(member.getName());
+
+
+        return ResponseEntity.ok(memberResponse);
+    }
+
+    @Override
+    public ResponseEntity<MemberResponse> deleteMember(Long id) {
+        return MemberApi.super.deleteMember(id);
     }
 }
